unpackaged/pre/first/objects/Account.object
<CustomObject>
    <fields>
        <fullName>CSA_Prefs__c</fullName>
        <label>CSA Prefs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Charter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Charter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Church_Partners__c</fullName>
        <label>Church Partners</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denomination_Subtype__c</fullName>
        <label>Denomination Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Denomination__c</fullName>
        <label>Denomination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AME</fullName>
                </value>
                <value>
                    <fullName>Anglican</fullName>
                </value>
                <value>
                    <fullName>Antioch</fullName>
                </value>
                <value>
                    <fullName>Apostolic</fullName>
                </value>
                <value>
                    <fullName>Assembly of God</fullName>
                </value>
                <value>
                    <fullName>Baptist</fullName>
                </value>
                <value>
                    <fullName>Brethren</fullName>
                </value>
                <value>
                    <fullName>Catholic</fullName>
                </value>
                <value>
                    <fullName>Christian</fullName>
                </value>
                <value>
                    <fullName>Christian Church</fullName>
                </value>
                <value>
                    <fullName>Christian Orthodox</fullName>
                </value>
                <value>
                    <fullName>Christian Reformed</fullName>
                </value>
                <value>
                    <fullName>Church of Christ</fullName>
                </value>
                <value>
                    <fullName>Church of God</fullName>
                </value>
                <value>
                    <fullName>Church of South India</fullName>
                </value>
                <value>
                    <fullName>CMA</fullName>
                </value>
                <value>
                    <fullName>CME</fullName>
                </value>
                <value>
                    <fullName>COCOG</fullName>
                </value>
                <value>
                    <fullName>COGIC</fullName>
                </value>
                <value>
                    <fullName>Disciples of Christ</fullName>
                </value>
                <value>
                    <fullName>ECFA</fullName>
                </value>
                <value>
                    <fullName>Episcopal</fullName>
                </value>
                <value>
                    <fullName>Evangelical Covenant</fullName>
                </value>
                <value>
                    <fullName>Evangelical Free</fullName>
                </value>
                <value>
                    <fullName>Friends Church</fullName>
                </value>
                <value>
                    <fullName>Full Gospel</fullName>
                </value>
                <value>
                    <fullName>Greek Orthodox</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Latter Day Saints</fullName>
                </value>
                <value>
                    <fullName>Lutheran</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_Not_Mail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <label>E-mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ethnic_Mix__c</fullName>
        <label>Ethnic Mix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Facebook__c</fullName>
        <label>Facebook</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Free_Lunch__c</fullName>
        <label>Free Lunch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_API_Place_Details_Response__c</fullName>
        <label>Google API Place Details Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Maps_Listing__c</fullName>
        <label>Google Maps Listing</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Google_Maps_Rating__c</fullName>
        <label>Google Maps Rating</label>
        <precision>2</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>High_Grade__c</fullName>
        <label>High Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instagram__c</fullName>
        <label>Instagram</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>10</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Locale_Code__c</fullName>
        <label>Locale Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>31</fullName>
                </value>
                <value>
                    <fullName>32</fullName>
                </value>
                <value>
                    <fullName>41</fullName>
                </value>
                <value>
                    <fullName>42</fullName>
                </value>
                <value>
                    <fullName>43</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>City:Large</fullName>
                </value>
                <value>
                    <fullName>City:Small</fullName>
                </value>
                <value>
                    <fullName>Suburb:Large</fullName>
                </value>
                <value>
                    <fullName>Suburb:Small</fullName>
                </value>
                <value>
                    <fullName>Town:Fringe</fullName>
                </value>
                <value>
                    <fullName>Town:Distant</fullName>
                </value>
                <value>
                    <fullName>Rural:Fringe</fullName>
                </value>
                <value>
                    <fullName>Rural:Distant</fullName>
                </value>
                <value>
                    <fullName>Rural:Remote</fullName>
                </value>
                <value>
                    <fullName>Suburb:Midsize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longtitude__c</fullName>
        <label>Longtitude</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Grade__c</fullName>
        <label>Low Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>KG</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Magnet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Magnet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NCES_ID__c</fullName>
        <externalId>true</externalId>
        <label>NCES ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_ID__c</fullName>
        <description>New ID - must be unique</description>
        <label>New ID</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Number_of_Google_Maps_Ratings__c</fullName>
        <label>Number of Google Maps Ratings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pastor__c</fullName>
        <label>Pastor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Placeholder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Placeholder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred_Name__c</fullName>
        <label>Preferred Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Priority_District__c</fullName>
        <formula>Parent.Priority__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority District?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Priority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reduced_Lunch__c</fullName>
        <label>Reduced Lunch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Count__c</fullName>
        <formula>IF(TEXT(Type) = &quot;School&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_District_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School District</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_Level__c</fullName>
        <formula>IF( 
AND( 
OR( 
TEXT(Low_Grade__c)=&quot;PK&quot;, 
TEXT(Low_Grade__c)=&quot;KG&quot; 
), 
OR( 
TEXT(High_Grade__c)=&quot;PK&quot;, 
TEXT(High_Grade__c)=&quot;KG&quot; 
) 
), 
&quot;EEC&quot;, 
IF( 
AND( 
OR( 
TEXT(Low_Grade__c)=&quot;PK&quot;, 
TEXT(Low_Grade__c)=&quot;KG&quot;, 
AND( 
ISNUMBER(TEXT(Low_Grade__c)), 
VALUE(TEXT(Low_Grade__c))&lt;4 
) 
), 
AND( 
ISNUMBER(TEXT(High_Grade__c)), 
VALUE(TEXT(High_Grade__c))&lt;9 
) 
), 
&quot;Elementary&quot;, 
IF( 
AND( 
AND( 
ISNUMBER(TEXT(Low_Grade__c)), 
VALUE(TEXT(Low_Grade__c))&gt;4, 
VALUE(TEXT(Low_Grade__c))&lt;8 
), 
AND( 
ISNUMBER(TEXT(High_Grade__c)), 
VALUE(TEXT(High_Grade__c))&lt;10 
) 
), 
&quot;Intermediate/Middle&quot;, 
IF( 
AND( 
ISNUMBER(TEXT(Low_Grade__c)), 
VALUE(TEXT(Low_Grade__c))&gt;8, 
VALUE(TEXT(High_Grade__c))&gt;8 
), 
&quot;High&quot;, 
&quot;&quot; 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_with_Active_Partnership__c</fullName>
        <formula>of_Active_Church_Partnerships__c &gt; 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School with Active Partnership?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_ID__c</fullName>
        <externalId>true</externalId>
        <label>State ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Partnership</fullName>
                </value>
                <value>
                    <fullName>Wants Partner</fullName>
                </value>
                <value>
                    <fullName>Not Ready Yet</fullName>
                </value>
                <value>
                    <fullName>Not Interested</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Teacher_Ratio__c</fullName>
        <formula>Students__c / Teachers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Teacher Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Students__c</fullName>
        <label>Students</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teachers__c</fullName>
        <label>Teachers</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_1_School_Wide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title 1 School Wide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title_I_School__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Title I School</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YSN_Last_Updated__c</fullName>
        <label>YSN Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>YSN_Unique_Number__c</fullName>
        <label>YSN Unique Number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_First_5_Digits__c</fullName>
        <formula>LEFT(BillingPostalCode , 5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zip Code (First 5 Digits)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bde__Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Batch</label>
        <referenceTo>bde__Batch__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>of_Accounts__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Active_Church_Partnerships__c</fullName>
        <label># of Active Church Partnerships</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Active_Partnerships__c</fullName>
        <label># of Active School Partnerships</label>
        <summaryFilterItems>
            <field>Church_School_Partnership__c.Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Church_School_Partnership__c.Church_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>of_Partnerships__c</fullName>
        <label># of School Partnerships</label>
        <summaryForeignKey>Church_School_Partnership__c.Church_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>MyOrganizations</fullName>
        <filterScope>Mine</filterScope>
        <label>My Organizations</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Church</fullName>
        <active>true</active>
        <description>Churches and church networks</description>
        <label>Church</label>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>An Account representing a Household containing one or more individuals</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Organization</fullName>
        <active>true</active>
        <description>An Account representing an organization</description>
        <label>Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>School</fullName>
        <active>true</active>
        <description>Used for schools and school districts</description>
        <label>School</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>